Added login filter, refactored code